--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>Git 메인2 페이지</h1>
+    <div>
+        <ul>
+            <li>Item1</li>
+            <li>Item2</li>
+        </ul>
+    </div>
+
 </body>
 </html>
